<resources>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2_items">(2 items)</string>
    <string name="add_item">+</string>
    <string name="add_new_address">Add new address</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="address">Address</string>
    <string name="address_detail">Address Detail</string>
    <string name="address_label">Address Label</string>
    <string name="address_resto">Alam Sutera, Jl. Jalur Sutera Bar. No.Kav. 7–9</string>
    <string name="alfaresto">AlfaResto</string>
    <string name="alfaresto_logo">Alfaresto Logo</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="app_name">AlfaResto-CustomersApp</string>
    <string name="apa">apa</string>
    <string name="back_logo">Back Logo</string>
    <string name="cartlogo">cartLogo</string>
    <string name="checkout">Checkout Order</string>
    <string name="cod">COD</string>
    <string name="delivered">Your order has arrived, Thank you for using AlfaResto</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_in">Delivery In</string>
    <string name="dialog_for_enable_gps_message">Your GPS seems to be disabled. Do you want to enable it?</string>
...
    <string name="guest">Guest</string>
    <string name="hello">Hello,</string>
    <string name="hi_user">Hi, User!</string>
    <string name="icon_proceed">Icon_Proceed</string>
    <string name="latest">Latest</string>
    <string name="list_all_menu">List All Menu</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_image">Login Image</string>
    <string name="login_success">Login Success</string>
    <string name="logout_logo">Logout Logo</string>
    <string name="marker">marker</string>
    <string name="me">Me</string>
    <string name="menu_image">menu image</string>
    <string name="menu_image_view">menuImageView</string>
    <string name="message_hint">Type a message</string>
    <string name="name">Name</string>
...
    <string name="splash_screen_description">Splash Screen</string>
    <string name="strip">-</string>
    <string name="tempat_kerja">Tempat Kerja</string>
    <string name="total">Total Price : </string>
    <string name="user_email">User Email</string>
    <string name="we_re_sorry_we_need_your_location_permission_to_use_this_app">We\'re sorry we need location permission for this app</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="yes">Yes</string>
    <string name="your_driver_is_on_the_way">your driver is on the way</string>
    <string name="track_order">Track Order</string>
    <string name="permission_required">Permission Required</string>
    <string name="chat">Chat</string>
    <string name="available">Available</string>
...
    <string name="checkout_confirmation_message">Do you want to continue checkout process?</string>
    <string name="complain_text">Any issue? Complaint here.</string>
    <string name="complain">Complain</string>
    <string name="restaurant_closed">Alfa Resto is closed</string>
    <string name="logout_confirmation_title">Logout confirmation</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Cancelled</string>
    <string name="no_internet">No internet, please check your connection</string>
    <string name="no_address">No addresses found…</string>
    <string name="no_order_history">Order History Loaded. There\'s no order history.</string>
    <string name="no_internet_connection">No internet Connection</string>
...
