<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/alfaresto_logo"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/tv_toolbar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bold"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/address"
        android:textColor="@color/mainblack"
        android:textSize="@dimen/font_24"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dimen_12">

        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout_logo"
            android:src="@drawable/ic_logout" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dimen_12">

        <ImageButton
            android:id="@+id/btn_add_address"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dimen_15"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_new_address"
            android:src="@drawable/ic_add_address" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/dimen_50"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_logo"
            android:src="@drawable/ic_back"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/toggle_sort_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/toggle_sort"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_sort_latest"
            android:gravity="center"
            android:textColor="@color/white"
            android:textOff=""
            android:textOn="" />

    </RelativeLayout>

</androidx.appcompat.widget.Toolbar>