<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dimen_230"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dimen_25"
    app:cardCornerRadius="@dimen/dimen_20"
    app:cardUseCompatPadding="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_menu_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_none"
            android:layout_marginBottom="@dimen/dimen_10"
            android:contentDescription="@string/menu_image_view"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/ll_texts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/ll_texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_15"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btn_menu_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_menu_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:maxLines="1"
                android:text="@string/soft_shell_taco"
                android:textSize="@dimen/font_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_menu_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold"
                android:text="@string/rp_50_000"
                android:textSize="@dimen/font_15" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_menu_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_add_button"
            android:fontFamily="@font/bold"
            android:padding="@dimen/dimen_20"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clActionButtons"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_35"
            app:layout_constraintBottom_toBottomOf="@id/btn_menu_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_menu_add">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_decrease_order"
                android:layout_width="@dimen/dimen_none"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dimen_20"
                android:background="@drawable/ic_decrease_order"
                android:fontFamily="@font/bold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_20"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_order_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:fontFamily="@font/bold"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_order"
                android:layout_width="@dimen/dimen_none"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dimen_20"
                android:background="@drawable/ic_add_order"
                android:fontFamily="@font/bold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_24"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/fl_no_stock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:alpha="0.6"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/out_of_stock"
                android:layout_margin="30dp"
                />

        </FrameLayout>


    </FrameLayout>

</androidx.cardview.widget.CardView>